MOBI-418 CSS Cleanup - add box-sizing border-box to base tabset styles to avoid wrapping
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@31985 1de00972-ac04-4911-a46b-06793c8d78d9

--- a/resources/themes/base/1_tabset.css
+++ b/resources/themes/base/1_tabset.css
@@ -75,6 +75,8 @@ html.ipad .mobi-tabset > .mobi-tabset-tabs, html.honeycomb .mobi-tabset > .mobi-
     line-height: 40px;
     padding: 0;
     /*text-align: center;*/
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 .mobi-tabpage-hidden { 
     display: none; 
